--- a/graphics/omnibar.html
+++ b/graphics/omnibar.html
@@ -175,10 +175,12 @@
 
         @keyframes slideleft {
             from {
-                left: 100%;
+                opacity: 0;
+                left: 50%;
             }
 
             to {
+                opacity: 1;
                 left: 0%;
             }
         }
