--- a/graphics/omnibar.html
+++ b/graphics/omnibar.html
@@ -11,6 +11,7 @@
         .zd-omnibar {
             height: 80px;
             width: 1920px;
+            box-sizing: border-box;
             margin-top: 80px;
             position: relative;
             border-top: 3px solid #f3ba33;
