--- a/graphics/3x10x9.html
+++ b/graphics/3x10x9.html
@@ -19,37 +19,36 @@
             width: 1920px;
             position: relative;
         }
-        
+
         #app > * {
             position: absolute;
         }
 
-        #p1, #p2 {
-            top: 432px;
+        #p1, #p2, #p3 {
+            top: 576px;
         }
 
-        #p3, #p4 {
-            bottom: 512px;
+        #p1 {
+            left: 120px;
         }
 
-        #p1, #p3 {
-            left: 184px;
+        #p2 {
+            left: 760px;
         }
 
-        #p2, #p4 {
-            right: 184px;
+        #p3 {
+            right: 120px;
         }
 
         .zd-timer {
-            top: 300px;
-            left: 860px;
+            bottom: 232px;
+            right: 100px;
         }
 
         .zd-social {
-            top: 360px;
-            left: 768px;
-            width: 384px;
-            height: 340px;
+            bottom: 80px;
+            width: 400px;
+            height: 364px;
         }
     </style>
 </head>
@@ -58,8 +57,7 @@
         <zd-timer></zd-timer>
         <zd-player id="p1" :num="0"></zd-player>
         <zd-player id="p2" :num="1"></zd-player>
-        <zd-player id="p3" :num="2" :pos="'bottomleft'"></zd-player>
-        <zd-player id="p4" :num="3" :pos="'bottomleft'"></zd-player>
+        <zd-player id="p3" :num="2"></zd-player>
         <zd-social></zd-social>
     </div>
 </body>
