--- a/graphics/1x16x9.html
+++ b/graphics/1x16x9.html
@@ -12,7 +12,7 @@
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
-    <script defer src="../shared/scripts/app.js"></script>
+    <script defer src="./layout.js"></script>
     <style>
         #app {
             height: 1080px;
@@ -22,37 +22,30 @@
 
         #p1 {
             position: absolute;
-            top: 35px;
-            left: 520px;
-        }
-        
-        #p2 {
-            position: absolute;
-            bottom: 115px;
-            left: 520px;
+            top: 864px;
+            right: 568px;
         }
 
         .zd-timer {
             position: absolute;
-            top: 517px;
-            right: 138px;
+            top: 902px;
+            right: 184px;
         }
 
         .zd-social {
             position: absolute;
-            top: 480px;
-            right: 0px;
-            width: 480px;
-            height: 517px;
+            top: 902px;
+            left: 276px;
+            width: 400px;
+            height: 60px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
         <zd-timer></zd-timer>
-        <zd-player id="p1" :num="0" :pos="'right'"></zd-player>
-        <zd-player id="p2" :num="1" :pos="'right'"></zd-player>
-        <zd-social></zd-social>
+        <zd-player id="p1" :num="0" :run-name="runName"></zd-player>
+        <zd-social class="zd-social--small"></zd-social>
     </div>
 </body>
 </html>
