--- a/graphics/2x16x9.html
+++ b/graphics/2x16x9.html
@@ -12,7 +12,7 @@
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
-    <script defer src="../shared/scripts/app.js"></script>
+    <script defer src="./layout.js"></script>
     <style>
         #app {
             height: 1080px;
@@ -29,11 +29,11 @@
         }
 
         #p1 {
-            left: 460px;
+            left: 280px;
         }
 
         #p2 {
-            right: 460px;
+            right: 280px;
         }
 
         .zd-timer {
@@ -42,10 +42,10 @@
         }
 
         .zd-social {
-            top: 540px;
-            left: 460px;
-            width: 1000px;
-            height: 460px;
+            top: 600px;
+            left: 711px;
+            width: 498px;
+            height: 400px;
             overflow: hidden;
         }
     </style>
@@ -53,8 +53,8 @@
 <body> 
     <div id="app">
         <zd-timer></zd-timer>
-        <zd-player id="p1" :num="0"></zd-player>
-        <zd-player id="p2" :num="1"></zd-player>
+        <zd-player id="p1" :num="0" :run-name="runName" ></zd-player>
+        <zd-player id="p2" :num="1" :run-name="runName"></zd-player>
         <zd-social></zd-social>
     </div>
 </body>
