--- a/graphics/2x2x4x3.html
+++ b/graphics/2x2x4x3.html
@@ -12,7 +12,7 @@
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
-    <script defer src="../shared/scripts/app.js"></script>
+    <script defer src="./layout.js"></script>
     <style>
         #app {
             height: 1080px;
@@ -25,33 +25,32 @@
         }
 
         #p1 {
-            left: 640px;
+            left: 667px;
         }
 
         #p2 {
-            top: 900px;
-            right: 640px;
+            bottom: 80px;
+            right: 667px;
         }
 
         .zd-timer {
-            top: 480px;
-            left: 1080px;
+            top: 470px;
+            right: 667px;
+            width: 186px;
         }
 
         .zd-social {
-            top: 480px;
-            left: 640px;
-            width: 640px;
-            height: 420px;
+            top: 470px;
+            left: 667px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
         <zd-timer></zd-timer>
-        <zd-player id="p1" :num="0" :pos="'left'"></zd-player>
-        <zd-player id="p2" :num="1" :pos="'right'"></zd-player>
-        <zd-social :pos="'topleft'"></zd-social>
+        <zd-player id="p1" :num="0" :run-name="runName" :pos="'left'"></zd-player>
+        <zd-player id="p2" :num="1" :run-name="runName" :pos="'right'"></zd-player>
+        <zd-social class="zd-social--small"></zd-social>
     </div>
 </body>
 </html>
