--- a/graphics/2x8x7.html
+++ b/graphics/2x8x7.html
@@ -12,7 +12,7 @@
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
-    <script defer src="../shared/scripts/app.js"></script>
+    <script defer src="./layout.js"></script>
     <style>
         #app {
             height: 1080px;
@@ -50,8 +50,8 @@
 <body> 
     <div id="app">
         <zd-timer></zd-timer>
-        <zd-player id="p1" :num="0" :pos="'topright'"></zd-player>
-        <zd-player id="p2" :num="1"></zd-player>
+        <zd-player id="p1" :num="0" :run-name="runName" :pos="'topright'"></zd-player>
+        <zd-player id="p2" :num="1" :run-name="runName"></zd-player>
         <zd-social></zd-social>
     </div>
 </body>
