--- a/graphics/3x2x4x3.html
+++ b/graphics/3x2x4x3.html
@@ -12,7 +12,7 @@
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
-    <script defer src="../shared/scripts/app.js"></script>
+    <script defer src="./layout.js"></script>
     <style>
         #app {
             height: 1080px;
@@ -29,7 +29,7 @@
         }
 
         #p1 {
-            left: 56px;
+            right: 1080px;
         }
 
         #p2 {
@@ -41,24 +41,24 @@
         }
 
         .zd-timer {
-            left: 604px;
+            left: 92px;
         }
 
         .zd-social {
-            top: 56px;
-            left: 512px;
-            width: 384px;
-            height: 444px;
+            top: 28px;
+            left: 760px;
+            width: 400px;
+            height: 60px;
         }
     </style>
 </head>
 <body> 
     <div id="app">
         <zd-timer></zd-timer>
-        <zd-player id="p1" :num="0"></zd-player>
-        <zd-player id="p2" :num="1"></zd-player>
-        <zd-player id="p3" :num="2"></zd-player>
-        <zd-social></zd-social>
+        <zd-player id="p1" :run-name="runName" :num="0"></zd-player>
+        <zd-player id="p2" :run-name="runName" :num="1"></zd-player>
+        <zd-player id="p3" :run-name="runName" :num="2"></zd-player>
+        <zd-social class="zd-social--small"></zd-social>
     </div>
 </body>
 </html>
