--- a/graphics/3x5x3.html
+++ b/graphics/3x5x3.html
@@ -12,7 +12,7 @@
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
-    <script defer src="../shared/scripts/app.js"></script>
+    <script defer src="./layout.js"></script>
     <style>
         #app {
             height: 1080px;
@@ -49,9 +49,9 @@
 <body> 
     <div id="app">
         <zd-timer></zd-timer>
-        <zd-player id="p1" :num="0" :pos="'left'"></zd-player>
-        <zd-player id="p2" :num="1" :pos="'bottomright'"></zd-player>
-        <zd-player id="p3" :num="2" :pos="'bottomleft'"></zd-player>
+        <zd-player id="p1" :num="0" :run-name="runName" :pos="'left'"></zd-player>
+        <zd-player id="p2" :num="1" :run-name="runName" :pos="'bottomright'"></zd-player>
+        <zd-player id="p3" :num="2" :run-name="runName" :pos="'bottomleft'"></zd-player>
         <zd-social class="zd-social--small"></zd-social>
     </div>
 </body>
