--- a/graphics/e2x3x2.html
+++ b/graphics/e2x3x2.html
@@ -13,7 +13,7 @@
     <script defer src="../shared/components/timer.js"></script>
     <script defer src="../shared/components/social.js"></script>
     <script defer src="../shared/components/checkpoint.js"></script>
-    <script defer src="../shared/scripts/app.js"></script>
+    <script defer src="./layout.js"></script>
     <style>
         #app {
             height: 1080px;
@@ -59,8 +59,8 @@
 <body> 
     <div id="app">
         <zd-timer></zd-timer>
-        <zd-player id="p1" :num="0" :type="'elimination'"></zd-player>
-        <zd-player id="p2" :num="1" :pos="'topright'" :type="'elimination'"></zd-player>
+        <zd-player id="p1" :num="0" :run-name="runName" :type="'elimination'"></zd-player>
+        <zd-player id="p2" :num="1" :run-name="runName" :pos="'topright'" :type="'elimination'"></zd-player>
         <zd-social></zd-social>
         <!--zd-checkpoint></zd-checkpoint-->
     </div>
