--- a/dashboard/runs/runs.html
+++ b/dashboard/runs/runs.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="https://unpkg.com/vue-material@1.0.0-beta-11/dist/vue-material.min.css">
     <link rel="stylesheet" href="https://unpkg.com/vue-material@1.0.0-beta-11/dist/theme/default-dark.css">
     <link rel="stylesheet" href="../shared/styles.css" />
+    <link rel="stylesheet" href="../../shared/styles/levels.css" />
     <script defer src="../../shared/scripts/lodash.core.js"></script>
     <script defer src="../../shared/scripts/vue.js"></script>
     <script defer src="https://unpkg.com/vue-material@1.0.0-beta-11"></script>
     <script defer src="../../shared/scripts/vuecg.js"></script>
     <script defer src="../../shared/components/timer.js"></script>
+    <script defer src="../../shared/components/levels.js"></script>
     <script defer src="./readonly-field.js"></script>
     <script defer src="./finish-button.js"></script>
     <script defer src="./player-dialog.js"></script>
@@ -20,6 +22,7 @@
     <script defer src="./elimination-card.js"></script>
     <script defer src="./rumble-card.js"></script>
     <script defer src="./bingo-card.js"></script>
+    <script defer src="./levels-card.js"></script>
     <script defer src="./incentive-card.js"></script>
     <script defer src="./run.js"></script>
     <script defer src="./runs.js"></script>
