--- a/dashboard/runs/runs.html
+++ b/dashboard/runs/runs.html
@@ -18,11 +18,13 @@
     <script defer src="./finish-button.js"></script>
     <script defer src="./player-dialog.js"></script>
     <script defer src="./racer-card-header.js"></script>
+    <script defer src="./team-member.js"></script>
     <script defer src="./race-card.js"></script>
     <script defer src="./elimination-card.js"></script>
     <script defer src="./rumble-card.js"></script>
     <script defer src="./bingo-card.js"></script>
     <script defer src="./levels-card.js"></script>
+    <script defer src="./team-card.js"></script>
     <script defer src="./incentive-card.js"></script>
     <script defer src="./run.js"></script>
     <script defer src="./runs.js"></script>
